--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,9 @@ services:
         build: ./docker/postgres
         restart: on-failure
 
-        volumes:
+        #volumes:
             # experimental
-            - ./dbdata:/var/lib/postgresl/data_docker
+        #    - ./dbdata:/var/lib/postgresl/data_docker
 
     # Message queue receives tasks from django to be consumed by celery worker
     queue:
