allow GEOIP to be set from compose file

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ EXCHANGE_HOME=~/git/boundless/exchange
 # Host path to mount inside the container as /mnt/maploom
 MAPLOOM_HOME=~/git/boundless/MapLoom
 STORYSCAPES_ENABLED=True
+
+GEOIP=131.170.250.166
