retry of prod changs on earlier commit

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 # Host path to mount inside container as /mnt/geonode
-GEONODE_HOME=~/boundless/geonode
+GEONODE_HOME=~/git/boundless/geonode
 # Host path to mount inside container as /mnt/exchange
-EXCHANGE_HOME=~/boundless/exchange
+EXCHANGE_HOME=~/git/boundless/exchange
 
 # Host path to mount inside the container as /mnt/maploom
-MAPLOOM_HOME=~/boundless/MapLoom
+MAPLOOM_HOME=~/git/boundless/MapLoom
+
+GEOIP=131.170.250.166
