--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,5 @@
 version: '2'
 
-# It's not normally necessary to explicitly set up Docker's networks, but
-# we want to set fixed IPs for convenience, and that seems to require all this.
-networks:
-    # Explicitly-defined internal network for containers to talk to each other
-    internal:
-        ipam:
-            config:
-              - subnet: 172.16.237.0/24
-                gateway: 172.16.237.1
-    # Network for exposing IPs for access from the host, e.g. your browser
-    external:
-        ipam:
-            config:
-              - subnet: 172.16.238.0/24
-                gateway: 172.16.238.1
 
 volumes:
     # This magic line creates a named volume for sharing across containers.
@@ -30,17 +15,19 @@ services:
         # see docker/nginx/Dockerfile
         # The only change from upstream is to add a section to the nginx config
         build: ./docker/nginx
-        networks:
-            internal:
-            # users need nginx visible to host on a fixed IP for convenience;
-            # otherwise constantly do a dance with `docker inspect` to get IPs
-            external:
-                ipv4_address: 172.16.238.2
+        restart: on-failure
         # proxy needs hostnames which resolve to running exchange and geoserver
         # containers, so it can proxy to them
         links:
             - exchange
             - geoserver
+        depends_on:
+            - exchange
+            - geoserver
+        ports:
+            - "80:80"
+            - "443:443"
+            - "8080:8080"
 
     # Database for use by Django, Celery and GeoServer
     database:
@@ -50,28 +37,26 @@ services:
         # adds in an initialization script for Exchange-specific requirements
         # also bakes in the initialization to avoid doing it at boot time
         build: ./docker/postgres
-        networks:
-            - internal
+        restart: on-failure
+        volumes:
+            # experimental
+            - ./dbdata:/var/lib/postgresql/data
 
     # Message queue receives tasks from django to be consumed by celery worker
     queue:
         container_name: queue
         # Not customized
         image: rabbitmq:3.6
-        networks:
-            - internal
+        restart: on-failure
+
 
     # Search engine
     search:
         container_name: search
         # Not customized
         image: elasticsearch:1.7
-        ports:
-            - "9200"
-        networks:
-            internal:
-            external:
-                ipv4_address: 172.16.238.5
+        # ports:
+        #     - "9200"
 
     # Useful thing
     geoserver:
@@ -80,20 +65,21 @@ services:
         # see docker/geoserver/Dockerfile
         # This modifies a tomcat image using JRE 8 to add and configure an
         # instance of GeoServer from the magic WAR file Exchange needs.
-        build: ./docker/geoserver
-        ports:
-            # 8080 is the traditional HTTP port baked into server.xml
-            - "8080"
+        build:
+            context: ./docker/geoserver
+            args:
+                GEOIP: $GEOIP
+        # ports:
+        #     # 8080 is the traditional HTTP port baked into server.xml
+        #     - "8080"
         links:
+            - database
+        depends_on:
             - database
         volumes:
             - scratch:/scratch
-        networks:
-            internal:
-            # Expose Geoserver on a fixed host IP for diagnostic purposes.
-            # Tomcat has /, GeoServer is under /geoserver at this IP
-            external:
-                ipv4_address: 172.16.238.4
+        restart: on-failure
+
 
     # Django app which presents an interface and ties everything else together
     exchange:
@@ -102,11 +88,17 @@ services:
         image: exchange
         # see ./Dockerfile which defines the whole setup
         build: .
-
+        depends_on:
+            - database
+            - queue
+            - geoserver
+        restart: on-failure
         links:
             - database
             - queue
             - geoserver
+        environment:
+            - GEOIP=$GEOIP
 
         # Code in volumes shared with host, so edits are immediately visible.
         volumes:
@@ -129,16 +121,13 @@ services:
             # Example of how to mount something else from here.
             # - $HOME/stuff/django-osgeo-importer:/mnt/django-osgeo-importer:ro
 
-        networks:
-            internal:
-            external:
-                ipv4_address: 172.16.238.3
 
-        ports:
-            # Django at /
-            - "80"
-            # export ssl version as well.
-            - "443"
+        # ports:
+        expose:
+             # Django at /
+             - "80"
+             # export ssl version as well.
+             - "443"
 
     # worker process which does "background" work for the django app
     worker:
@@ -153,16 +142,20 @@ services:
             - database
             - geoserver
             - search
-
         # Inherit volume specifications from the exchange container
         volumes_from:
             - exchange
+        depends_on:
+            - proxy
+            - database
+            - geoserver
+            - search
+        environment:
+            - GEOIP=$GEOIP
         command: /root/worker.sh
         # celery worker brought back up if it goes down.
-        restart: always
-        networks:
-            - internal
-            - external
+        restart: on-failure
+
 
     # This memcached is not used by anything.
     cache:
